# arms_ros

./: .gitignore  Assembly 1_OC.stl  Brazo M v1_OC.stl  COMPOUND_OC.stl  FileFormatTest v2.fbx  FileFormatTest v2.step  FileFormatTest_floating v2.step  FileFormatTest_floating_offset v2.step  FileFormatTest_uneven.step  MotorMountTest v1.stl  MotorMountTest v2.step  MotorMountTest v6.step  MotorMountTest v8.3mf  MotorMountTest v8.step  MotorMountTest v8.zip.amf  MotorMountTest v9.step  MotorMountTest v9_sw.STEP  MotorMountTest v9_sw_OC.stl  MotorMountTest_both_external.step  Multipart_test v1.step  N20_2_external v1:1_cradle.stl  N20_2_external v1:1_sliced_cradle.stl  N20_2_external v1_OC.stl  N20_2_external.step_OC.stl  Negative.stl  Notched_socket_40_8.step  OC_test v1_OC.stl  OC_test_fusion.step  OC_test_onshape.step  OC_test_solidworks_203.STEP  OC_test_solidworks_214.STEP  OC_test_solidworks_214_OC.stl  Parts_bay_socket v2.step  Parts_bay_socket_12mm v0.fbx  Parts_bay_socket_12mm v2.step  Parts_bay_socket_405_6.step  Parts_bay_socket_40_6.step  Parts_bay_socket_41_6.step  Parts_bay_socket_6mm v0.fbx  Parts_bay_socket_6mm v2.step  (+54 more)
MotorMountTest v8.zip/: MotorMountTest v8.amf
ampi_project_interfaces/: CMakeLists.txt  package.xml
ampi_project_interfaces/action/: AddRecipie.action  BoltPickPlace.action  PickPlace.action  RunStep.action  SwapTool.action  TransferPlate.action
ampi_project_interfaces/msg/: Circle.msg  Datum.msg  Line.msg  MoonrakerNotification.msg  PickPlace.msg  PrintStep.msg  QuadraturePhotodiode.msg  QuadraturePhotodiodesStamped.msg  RecipieInfo.msg
ampi_project_interfaces/srv/: DiscoverRecipies.srv  GDTCircularity.srv  GDTFlatness.srv  GDTPosition.srv  GetStep.srv  HemisphereRadialScan.srv  RequestRecipie.srv  UpdateBeacons.srv
assembler/: CMakeLists.txt  package.xml
assembler/include/assembler/: ARMSConfig.hpp  Assembler.hpp  Config.hpp  CradleGenerator.hpp  MeshFunctions.hpp  ModelLoader.hpp  Part.hpp  visibility_control.h
assembler/src/: ARMSConfig.cpp  Assembler.cpp  Assembly.cpp  Config.cpp  CradleGenerator.cpp  MeshFunctions.cpp  ModelLoader.cpp  Part.cpp  assembler_node.cpp
assembler_msgs/: CMakeLists.txt  package.xml
assembler_msgs/action/: ProcessModel.action
assembler_msgs/msg/: AssemblyStep.msg
assembler_working/: readme.txt
src/assembler/: CMakeLists.txt  package.xml
src/assembler/include/assembler/: ARMSConfig.hpp  Assembler.hpp  Assembly.hpp  MeshFunctions.hpp  ModelLoader.hpp  Part.hpp
src/assembler/src/: ARMSConfig.cpp  Assembler.cpp  Assembly.cpp  MeshFunctions.cpp  ModelLoader.cpp  Part.cpp  assembler_node.cpp
